Fixed visuals for active sub menu items on mobile

--- a/wcfsetup/install/files/style/layout/box.scss
+++ b/wcfsetup/install/files/style/layout/box.scss
@@ -464,6 +464,32 @@
 							font-size: 14px;
 							margin-left: 7px;
 						}
+						
+						.boxMenuDepth1,
+						.boxMenuDepth2 {
+							position: relative;
+							
+							> li {
+								&:not(.active) {
+									display: none;
+								}
+								
+								&.active {
+									left: 0;
+									position: absolute;
+									right: 0;
+									top: 0;
+									transform: translateY(-100%);
+									
+									> a::after {
+										content: $fa-var-caret-down;
+										font-family: FontAwesome;
+										font-size: 14px;
+										margin-left: 7px;
+									}
+								}
+							}
+						}
 					}
 					
 					> li:first-child ~ li {
